--- a/style.css
+++ b/style.css
@@ -229,3 +229,89 @@ figcaption {
   filter: brightness(50%);
   transition: .5s ease;
 }
+
+/*////////////////////*/
+
+/*Cookie Consent Begin*/
+.cookieConsent {
+  width: 30em;
+  height: 20em;
+  background: white;
+  position: absolute;
+  float: left;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  box-shadow:0 0 20px rgb(43, 43, 43);
+  border-radius: 2em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+}
+
+.cookieConsent img{
+  width: 3em;
+}
+
+.binnen{
+  margin:1em;
+}
+
+.koekknoppen{
+  margin-top: 1em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.cookieConsentNOT{
+  color: #1b212b;
+  margin: 1em;
+}
+
+.cookieConsent a.cookieConsentOK {
+  background-color: #144bff;
+  color: rgb(255, 255, 255);
+  display: inline-block;
+  border-radius: 5px;
+  padding: 1em 1em;
+  cursor: pointer;
+  margin: 1em;
+}
+.cookieConsent a.cookieConsentOK:hover {
+  box-shadow:0 0 5px rgb(43, 43, 43);
+}
+
+
+.cookieConsent2 {
+  width: 30em;
+  height: 20em;
+  background: white;
+  position: absolute;
+  float: left;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  box-shadow:0 0 20px rgb(43, 43, 43);
+  border-radius: 2em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+}
+
+.cookieConsent2 a.cookieConsentOK {
+  background-color: #144bff;
+  color: rgb(255, 255, 255);
+  display: inline-block;
+  border-radius: 5px;
+  padding: 1em 1em;
+  cursor: pointer;
+  margin: 1em;
+}
+.cookieConsent2 a.cookieConsentOK:hover {
+  box-shadow:0 0 5px rgb(43, 43, 43);
+}
+/*Cookie Consent End*/
