--- a/css/men.css
+++ b/css/men.css
@@ -82,7 +82,7 @@ img {
 .card a {
   padding: 6px 15px 6px 15px;
   color: white;
-  background-color: #000;
+  background-color: #dc2121;
   cursor: pointer;
   width: 100%;
   font-size: 16px;
