--- a/style.css
+++ b/style.css
@@ -12,17 +12,10 @@ header {
   background-size: cover;
   background-position: top center;
   background-repeat: no-repeat;
-  background-image: url("Images/nike-bg-6.gif");
+  background-image: url("Images/a-headergif.jpg");
   background-attachment: fixed;
   width: 100%;
   height: 80%;
-}
-
-@media (max-width: 600px) {
-  header {
-    background-image: url("Images/nike-bg-5.gif");
-    background-attachment: scroll;
-  }
 }
 
 .pxtext {
@@ -48,12 +41,13 @@ header {
 }
 
 .pxtext>p>a {
-  background-color: black;
+  background-color: rgb(35, 197, 49);
   text-align: center;
   color: white;
   border-radius: 16px;
-  padding: 10px 10px 10px 10px;
-  margin-bottom: 10px;
+  padding: 1.5em 3em;
+  transform: translate(20px);
+  margin: 10px;
   text-decoration: none;
   box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.6);
   transition: .5s ease;
@@ -315,3 +309,7 @@ figcaption {
   box-shadow:0 0 5px rgb(43, 43, 43);
 }
 /*Cookie Consent End*/
+
+#sale{
+  font-size: bold;
+}
