--- a/css/info.css
+++ b/css/info.css
@@ -44,7 +44,7 @@ section {
 .col2>p {
     margin-right: 10%;
     text-align: justify;
-    font-size: 1.5vw;
+    font-size: 1.3vw;
     line-height: 1.3em;
 }
 
@@ -66,17 +66,17 @@ h2 {
 .button-cart {
     padding: 6px 15px 6px 15px;
     color: white;
-    background-color: #000;
+    background-color: rgb(61, 174, 93);
     cursor: pointer;
-    font-size: 16px;
+    font-size: 30px;
     border-radius: 16px;
     text-decoration: none;
 }
 
 .button-cart:hover {
     background-color: white;
-    color: #000;
-    border: 1px solid black;
+    color: rgb(61, 174, 93);
+    border: 1px solid rgb(61, 174, 93);
 }
 
 .wishlist {
@@ -88,11 +88,7 @@ h2 {
     color: #000;
 }
 
-video {
-    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.6);
-    border-radius: 10px;
-}
 
-video:focus {
-    outline: none;
+#price{
+    color: rgb(216, 62, 45);
 }
